--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
                 <div class="header-menu">
                     <span class="header-menu-span"></span>
                     <nav class="nav">
-                        <a href="#" class="nav__link">Home</a>
-                        <a href="#" class="nav__link">Portfolio</a>
-                        <a href="#" class="nav__link">Blog</a>
-                        <a href="#" class="nav__link">Pages</a>
-                        <a href="#" class="nav__link">Features</a>
-                        <a href="#" class="nav__link">Mega Menu</a>
-                        <a href="#" class="nav__link">Contact</a>
+                        <a href="#block-1" class="nav__link">Home</a>
+                        <a href="#block-5" class="nav__link">Portfolio</a>
+                        <a href="#block-6" class="nav__link">Blog</a>
+                        <a href="#block-3" class="nav__link">Pages</a>
+                        <a href="#block-2" class="nav__link">Features</a>
+                        <a href="#block-8" class="nav__link">Mega Menu</a>
+                        <a href="#footer" class="nav__link">Contact</a>
                         <button class="nav__link_input">
                             <i class="fas fa-search"></i>
                         </button>
@@ -45,17 +45,17 @@
             <span class="burger-menu-button"></span>
         </div>
         <div class="burger-links">
-            <a href="" class="burger-link__item">Home</a>
-            <a href="" class="burger-link__item">Portfolio</a>
-            <a href="" class="burger-link__item">Blog</a>
-            <a href="" class="burger-link__item">Pages</a>
-            <a href="" class="burger-link__item">Features</a>
-            <a href="" class="burger-link__item">Mega Menu</a>
-            <a href="" class="burger-link__item">Contact</a>
+            <a href="#block-1" class="burger-link__item">Home</a>
+            <a href="#block-5" class="burger-link__item">Portfolio</a>
+            <a href="#block-6" class="burger-link__item">Blog</a>
+            <a href="#block-3" class="burger-link__item">Pages</a>
+            <a href="#block-2" class="burger-link__item">Features</a>
+            <a href="#block-8" class="burger-link__item">Mega Menu</a>
+            <a href="#footer" class="burger-link__item">Contact</a>
             <input type="text" placeholder="Search something..." class="burger-input">
         </div>
     </section>
-    <section class="block-1">
+    <section class="block-1" id="block-1">
         <div class="container">
             <div class="block-1-wrapper">
                 <div class="left-shape">
@@ -104,7 +104,7 @@
             </div>
         </div>
     </section>
-    <section class="block-2">
+    <section class="block-2 block" id="block-2">
         <div class="container">
             <div class="block-2-wrapper">
                 <div class="block-2-title">
@@ -151,7 +151,7 @@
             </div>
         </div>
     </section>
-    <section class="block-3">
+    <section class="block-3" id="block-3">
         <div class="container">
             <div class="block-3-wrapper">
                 <div class="block-3-merits">
@@ -240,7 +240,7 @@
             </div>
         </div>
     </section>
-    <section class="block-4">
+    <section class="block-4 block" id="block-4">
         <div class="container">
             <div class="block-4-wrapper">
                 <div class="block-4-title">
@@ -298,7 +298,7 @@
             </div>
         </div>
     </section>
-    <section class="block-5">
+    <section class="block-5" id="block-5">
         <div class="block-5-wrapper">
             <div class="block-5-wrapper">
                 <div class="block-5-title">
@@ -546,7 +546,7 @@
             </div>
         </div>
     </section>
-    <section class="block-6">
+    <section class="block-6 block" id="block-6">
         <div class="container">
             <div class="block-6-wrapper">
                 <div class="block-6-title">
@@ -588,7 +588,7 @@
             </div>
         </div>
     </section>
-    <section class="block-7">
+    <section class="block-7" id="block-7">
         <div class="container">
             <div class="block-7-wrapper">
                 <div class="block-7-text">
@@ -605,7 +605,7 @@
             </div>
         </div>
     </section>
-    <section class="block-8">
+    <section class="block-8" id="block-8">
         <div class="container">
             <div class="block-8-wrapper">
                 <div class="block-8-title">
@@ -694,7 +694,7 @@
             </div>
         </div>
     </section>
-    <section class="block-9">
+    <section class="block-9" id="block-9">
         <div class="container">
             <div class="block-9-wrapper">
                 <div class="block-9-text">
@@ -704,7 +704,7 @@
             </div>
         </div>
     </section>
-    <section class="block-10">
+    <section class="block-10 block" id="block-10">
         <div class="container">
             <div class="block-10-wrapper">
                 <div class="slider">
@@ -727,7 +727,7 @@
             </div>
         </div>
     </section>
-    <section class="block-11">
+    <section class="block-11" id="block-11">
         <div class="container">
             <div class="block-11-wrapper">
                 <div class="block-11-title">
@@ -805,7 +805,7 @@
             </div>
         </div>
     </section>
-    <section class="block-12">
+    <section class="block-12" id="block-12">
         <div class="container">
             <div class="block-12-wrapper">
                 <div class="block-12-title">UNIQUE! We Do <span class="block-12-title__span"><i class="fas fa-heart"></i></span> It And Hope You Too</div>
@@ -815,7 +815,7 @@
             </div>
         </div>
     </section>
-    <footer class="footer">
+    <footer class="footer block" id="footer">
         <div class="container">
             <div class="footer-wrapper">
                 <div class="footer-logo">
